--- a/index.html
+++ b/index.html
@@ -1,99 +1,141 @@
 <!DOCTYPE html5>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <link href='https://fonts.googleapis.com/css?family=Bitter:400,400italic' rel='stylesheet' type='text/css'>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/3.0.8/pixi.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.8.0-alpha/matter.min.js"></script>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #000;
-            font-family: "Bitter", serif;
-        }
+  <meta charset="UTF-8">
+  <link href='https://fonts.googleapis.com/css?family=Bitter:400,400italic' rel='stylesheet' type='text/css'>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/3.0.8/pixi.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.8.0-alpha/matter.js"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #000;
+      font-family: "Bitter", serif;
+    }
 
-        .header, .doWeight {
-            position: fixed;
-            color: #fff;
-            z-index: 10;
-            width: 100%;            
-            text-align: center;
-        }
+    .header, .doWeight {
+      position: fixed;
+      color: #fff;
+      z-index: 10;
+      width: 100%;            
+      text-align: center;
+    }
 
-        .header {
-            top: 10%;
-            font-size: 60px;
-            opacity: 0.5;
-            font-style: italic;
-            pointer-events: none;
-        }
+    .header {
+      top: 10%;
+      font-size: 60px;
+      opacity: 0.5;
+      font-style: italic;
+      pointer-events: none;
+    }
 
-        .doWeight {
-            top: calc(10% + 100px);
-            font-size: 30px;
-            opacity: 0.6;
-            cursor: pointer;
-        }
+    .doWeight {
+      top: calc(10% + 100px);
+      font-size: 30px;
+      opacity: 0.6;
+      cursor: pointer;
+    }
 
-        .doWeight:hover {
-            opacity: 1;
-        }
-    </style>
+    .doWeight:hover {
+      opacity: 1;
+    }
+
+    #canvas {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
-    <span class="header">&#8220;Ken heistä on erilainen?&#8221;</span>
-    <span class="doWeight">Tee punnitus (1/3)</span>
-    <script>
-        var Engine = Matter.Engine,
-            World = Matter.World,
-            Bodies = Matter.Bodies;
+  <div id="canvas"></div>
+  <span class="header">&#8220;Ken heistä on erilainen?&#8221;</span>
+  <span class="doWeight">Tee punnitus (1/3)</span>
+  <script>
+    function createRenderer(renderingElement, balls) {
+      var pixiRenderer = null;
+      var pixiGraphics = null;
+      var ballTexts = [];
 
-        var width = document.body.clientWidth;
-        var height = document.body.clientHeight;
+      var Renderer = {
+        create: function() {
+          pixiRenderer = PIXI.autoDetectRenderer(renderingElement.clientWidth, renderingElement.clientHeight, { antialias: true });
+          renderingElement.appendChild(pixiRenderer.view);
 
-        var engine = Engine.create(document.body, {
-            render: {
-                options: {
-                    width: width,
-                    height: height,
-                    background: '#000',
-                    controller: Matter.RenderPixi,
-                    wireframes: false
-                }
-            },
-            world: {
-                bounds: {
-                    min: { x: 0, y: 0 },
-                    max: { x: width, y: height }
-                }
-            }
-        });
-
-        var renderOptions = {
-            fillStyle: '#000',
-            strokeStyle: '#fff',
-            lineWidth: 3
-        }
-
-        var balls = []
-        for (var i = 0; i < 12; i++) {
-            balls.push(Bodies.circle(width / 2 + i, height / 2 - (6 * 40) + 40 * i, 20, { render: renderOptions, restitution: 0.9 }))
-        }
-
-        var ground = Bodies.rectangle(width / 2, height - 10, width + 20, 20, { isStatic: true, render: renderOptions });
-
-        var mouseConstraint = Matter.MouseConstraint.create(engine, {
-          constraint: {
-            render: {
-              visible: false
-            },
-            stiffness: 1
+          for (var i = 0; i < 12; i++) {
+            var text = new PIXI.Text(i, {font: "20px Bitter", fill: 0xffffff})
+            text.anchor.x = 0.5;
+            text.anchor.y = 0.5;
+            ballTexts.push(text)
           }
-        });
+         
+          return {
+            controller: Renderer
+          };
+        },
 
-        World.add(engine.world, [ground, mouseConstraint].concat(balls));
-        Engine.run(engine);
-    </script>
+        world: function(engine) {
+          var pixiGraphics = new PIXI.Graphics();
+          pixiGraphics.lineStyle(3, 0xFFFFFF);
+
+          for (var i = 0; i < 12; i++) {
+            var ball = balls[i]
+            pixiGraphics.drawCircle(ball.position.x, ball.position.y, ball.circleRadius)
+
+            var text = ballTexts[i];
+            text.position.x = ball.position.x;
+            text.position.y = ball.position.y;
+            text.rotation = ball.angle;
+            pixiGraphics.addChild(text);
+          }
+
+          pixiRenderer.render(pixiGraphics)
+        },
+
+        clear: function() {
+        }
+      };
+
+      return Renderer;
+    }
+
+    var Engine = Matter.Engine,
+        World = Matter.World,
+        Bodies = Matter.Bodies;
+
+    var renderElement = document.getElementById("canvas");
+    var width = renderElement.clientWidth;
+    var height = renderElement.clientHeight;
+
+    var balls = []
+    for (var i = 0; i < 12; i++) {
+        balls.push(Bodies.circle(width / 2 + i, height / 2 - (6 * 40) + 40 * i, 20, { restitution: 0.9 }))
+    }
+
+    var ground = Bodies.rectangle(width / 2, height - 10, width + 20, 20, { isStatic: true });
+
+    var engine = Engine.create(document.body, {
+      render: {
+        controller: createRenderer(renderElement, balls),
+      },
+      world: {
+        bounds: {
+          min: { x: 0, y: 0 },
+          max: { x: width, y: height }
+        }
+      }
+    });
+
+    var mouseConstraint = Matter.MouseConstraint.create(engine, {
+      constraint: {
+        render: {
+          visible: false
+        },
+        stiffness: 1
+      }
+    });
+
+    World.add(engine.world, [ground, mouseConstraint].concat(balls));
+    Engine.run(engine);
+  </script>
 </body>
 </html>
